--- a/src/app/components/dashboard/content/visits-manager/visits-list/visits-list.component.css
+++ b/src/app/components/dashboard/content/visits-manager/visits-list/visits-list.component.css
@@ -2,10 +2,6 @@
     width: 50%;
 }
 
-.header span#width-70 {
-    width: 70%;
-}
-
 .header {
     background: rgb(38, 94, 215);
     color: white;
@@ -19,4 +15,7 @@
 .body {
     overflow-x: hidden;
     overflow-y: auto;
+    height: 460px;
+    max-height: 460px;
+    overflow: auto;
 }
