Visits and appointments inner navigation added and appointments manager init

--- a/src/app/components/dashboard/side-bar/side-bar.component.html
+++ b/src/app/components/dashboard/side-bar/side-bar.component.html
@@ -24,7 +24,7 @@
                 </a>
             </li>
             <li [class.active]="activatedRouter == 3">
-                <a routerLink="/dashboard/visits">
+                <a routerLink="/dashboard/visits-and-appointments-manager">
                     <i class="fa fa-calendar-check"></i>
                     <span>Gestion Des Visites</span>
                 </a>
@@ -48,7 +48,7 @@
                 </a>
             </li>
             <li [class.active]="activatedRouter == 7">
-                <a routerLink="/dashboard/expenses">
+                <a routerLink="/dashboard/financial-manager">
                     <i class="fa fa-coins"></i>
                     <span>Gestion Financier</span>
                 </a>
