--- a/src/app/components/dashboard/content/visits-and-appointments-manager/visits-and-appointments-manager.component.html
+++ b/src/app/components/dashboard/content/visits-and-appointments-manager/visits-and-appointments-manager.component.html
@@ -1,1 +1,16 @@
-<p>visits-and-appointments-manager works!</p>
+<div class="main-container">
+    <app-header></app-header>
+    <div class="inner-navigation row">
+        <a [class.selected]="selectedOption == 'visits'">
+            <i class="fa fa-fa fa-calendar-check"></i>
+            <span>Visites</span>
+        </a>
+        <a [class.selected]="selectedOption == 'appointments'">
+            <i class="fa fa-fa fa-calendar"></i> <span>Rendez-Vous</span>
+        </a>
+    </div>
+
+    <div class="body">
+        <router-outlet></router-outlet>
+    </div>
+</div>
