--- a/src/app/components/dashboard/content/financial-manager/financial-manager.component.html
+++ b/src/app/components/dashboard/content/financial-manager/financial-manager.component.html
@@ -1,1 +1,12 @@
-<p>financial-manager works!</p>
+<div class="main-container">
+    <app-header></app-header>
+    <div class="inner-navigation row">
+        <a [class.selected]="selectedOption == 'expenses'" routerLink="expenses">
+            <i class="fa fa-fa fa-calendar-check"></i>
+            <span>Les Frais</span>
+        </a>
+        <a [class.selected]="selectedOption == 'debt'" routerLink="debt">
+            <i class="fa fa-fa fa-calendar"></i> <span>Crédits</span>
+        </a>
+    </div>
+</div>
