--- a/src/app/components/dashboard/content/financial-manager/financial-manager.component.html
+++ b/src/app/components/dashboard/content/financial-manager/financial-manager.component.html
@@ -9,4 +9,7 @@
             <i class="fa fa-fa fa-calendar"></i> <span>Crédits</span>
         </a>
     </div>
+    <div class="body">
+        <router-outlet></router-outlet>
+    </div>
 </div>
