--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/visit-prescription.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/visit-prescription.component.html
@@ -8,7 +8,7 @@
             <app-drug-submitter [visitDrugDosages]="visit.visitDrugDosages"></app-drug-submitter>
         </div>
         <div *ngIf="navigationOption == 2">
-
+            <app-drug-dosages-library></app-drug-dosages-library>
         </div>
 
     </div>
