prescription model submitter init

--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -20,5 +20,6 @@
         <app-medical-file-advanced-search *ngIf="windowPage == 'medical-file-advanced-search'" (closeEvent)="close()"></app-medical-file-advanced-search>
         <app-visit-appointment *ngIf="windowPage == 'visit-appointment'" (closeEvent)="close()"></app-visit-appointment>
         <app-add-expense *ngIf="windowPage == 'add-expense'" (closeEvent)="close()"></app-add-expense>
+        <app-prescription-model-submitter *ngIf="windowPage == 'prescription-model-submitter'" (closeEvent)="close()"></app-prescription-model-submitter>
     </div>
 </div>
