--- a/src/app/components/dashboard/content/patient-visit/visit-check-up/visit-check-up.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-check-up/visit-check-up.component.html
@@ -1,1 +1,8 @@
-<p>visit-check-up works!</p>
+<div class="main-container stretch-container">
+    <div class="side submitter-side primary-radius">
+        <app-check-up-submitter></app-check-up-submitter>
+    </div>
+    <div class="side prescription-side primary-radius">
+        <!--<app-prescription [visit]="visit"></app-prescription>-->
+    </div>
+</div>
