--- a/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
+++ b/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
@@ -10,7 +10,7 @@
                 <app-visit-prescription [visit]="visit"></app-visit-prescription>
             </div>
             <div class="page" *ngIf="page == 4">
-                <app-visit-check-up></app-visit-check-up>
+                <app-visit-check-up [visit]="visit"></app-visit-check-up>
             </div>
             <div class="page" *ngIf="page == 6">
                 <app-visit-documents></app-visit-documents>
