--- a/src/app/components/dashboard/content/patient-visit/visit-check-up/visit-check-up.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-check-up/visit-check-up.component.html
@@ -1,6 +1,6 @@
 <div class="main-container stretch-container">
     <div class="side submitter-side primary-radius">
-        <app-check-up-submitter></app-check-up-submitter>
+        <app-check-up-submitter [checkUps]="visit.checkUps"></app-check-up-submitter>
     </div>
     <div class="side prescription-side primary-radius">
         <!--<app-prescription [visit]="visit"></app-prescription>-->
