--- a/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up/check-up.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up/check-up.component.html
@@ -1,1 +1,3 @@
-<p>check-up works!</p>
+<div class="main-container" (click)="select()">
+    <p (click)="selectEvent.emit(checkUp)">{{checkUp.name}} <i class="fa fa-check" [class.selected]="selected"></i></p>
+</div>
