--- a/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up-type.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up-type.component.html
@@ -5,7 +5,7 @@
     </p>
     <div class="check-ups row" *ngIf="expand">
         <div class="col col-md-6" *ngFor="let checkUp of checkUpType.checkUps">
-            {{checkUp.name}}
+            <app-check-up (selectEvent)="select($event)" [checkUp]="checkUp"></app-check-up>
         </div>
     </div>
 </div>
