--- a/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up-type.component.css
+++ b/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up-type.component.css
@@ -16,3 +16,10 @@ p i {
 p:hover {
     border-color: #eee;
 }
+
+.check-ups {
+    padding: 8px 16px;
+    max-height: 220px;
+    margin: 0px;
+    overflow: auto;
+}
