Prescription Check ups init

--- a/src/app/components/dashboard/content/patient-visit/visit-check-up/visit-check-up.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-check-up/visit-check-up.component.html
@@ -3,6 +3,6 @@
         <app-check-up-submitter [checkUps]="visit.checkUps"></app-check-up-submitter>
     </div>
     <div class="side prescription-side primary-radius">
-        <!--<app-prescription [visit]="visit"></app-prescription>-->
+        <app-prescription [type]="'prescription-check-up'" [title]="'Demande de bilan'" [visit]="visit"></app-prescription>
     </div>
 </div>
