--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription.component.html
@@ -1,10 +1,15 @@
 <div class="main-container">
     <div class="prescription">
         <div class="header" *ngIf="doctor && cabinet">
-            <app-prescription-header [doctor]="doctor" [cabinet]="cabinet"></app-prescription-header>
+            <app-prescription-header [title]="title" [doctor]="doctor" [cabinet]="cabinet"></app-prescription-header>
         </div>
         <div class="body">
-            <app-prescription-drug-dosages [visit]="visit"></app-prescription-drug-dosages>
+            <div *ngIf="type =='drug-dosages'">
+                <app-prescription-drug-dosages [visit]="visit"></app-prescription-drug-dosages>
+            </div>
+            <div *ngIf="type == 'prescription-check-up'">
+                <app-prescription-check-up [visit]="visit"></app-prescription-check-up>
+            </div>
         </div>
         <div class="footer">
             <app-prescription-footer [doctor]="doctor" [cabinet]="cabinet"></app-prescription-footer>
