--- a/src/app/components/dashboard/content/patient-visit/visit-documents/visit-documents.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-documents/visit-documents.component.html
@@ -1,1 +1,14 @@
-<p>visit-documents works!</p>
+<div class="main-container primary-radius">
+    <div class="visit-document" *ngFor="let visitDocument of visitsDocuments ; let i = index">
+        <div class="visit-document-header">
+            <span>{{visitDocument.createdAt}}</span>
+            <hr>
+            <i class="fa fa-chevron-down"></i>
+        </div>
+        <div class="documents row">
+            <div class="col col-md-4" *ngFor="let document of visitDocument.documents">
+
+            </div>
+        </div>
+    </div>
+</div>
