--- a/src/app/components/dashboard/content/patient-visit/visit-documents/visit-documents.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-documents/visit-documents.component.html
@@ -1,11 +1,16 @@
 <div class="main-container primary-radius">
     <div class="visit-document" *ngFor="let visitDocument of visitsDocuments ; let i = index">
-        <div class="visit-document-header">
+        <div class="visit-document-header" (click)="selectVisit(visitDocument , i )">
             <span>{{visitDocument.createdAt}}</span>
             <hr>
             <i class="fa fa-chevron-down"></i>
         </div>
-        <div class="documents row">
+        <div class="documents row" *ngIf="i == 0 || expandVisit == visitDocument.id">
+            <div class="col col-md-3" *ngIf=" i == 0 ">
+                <div class="document-submitter primary-radius">
+                    <i class="fa fa-plus"></i>
+                </div>
+            </div>
             <div class="col col-md-3" *ngFor="let document of visitDocument.documents">
                 <app-document [document]="document"></app-document>
             </div>
