Add Document done

--- a/src/app/components/dashboard/content/patient-visit/visit-documents/document-submitter/document-submitter.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-documents/document-submitter/document-submitter.component.html
@@ -1,1 +1,29 @@
-<p>document-submitter works!</p>
+<div class="main-container">
+    <div class="content primary-radius">
+        <div class="image-container">
+            <app-image-viewer [height]="'320px'" (imageSelectedEvent)="onImageSelected($event)"></app-image-viewer>
+        </div>
+        <div class="info-container">
+            <form name="form" [formGroup]="form">
+
+                <div class="form-group">
+                    <input type="text" [(ngModel)]="document.name" placeholder="Titre" formControlName="name" class="primary-input" [ngClass]="{'is-invalid' : form.get('name').touched && form.get('name').invalid}">
+                    <div class="invalid-feedback" *ngIf="form.get('name').touched && form.get('name').invalid">
+                        <div *ngIf="form.get('name').errors.required">le titre est requis</div>
+                        <div *ngIf="form.get('name').errors.minlength">au moin 3 characters</div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <textarea [(ngModel)]="document.description" class="primary-input" placeholder="Description .." formControlName="description" [ngClass]="{'is-invalid' : form.get('description').touched && form.get('description').invalid}"></textarea>
+                    <div class="invalid-feedback" *ngIf="form.get('description').touched && form.get('description').invalid">
+                        <div *ngIf="form.get('description').errors.minlength">au moin 3 characters</div>
+                    </div>
+                </div>
+                <div class="control">
+                    <button class="secondary-button" (click)="clear()">Effacer </button>
+                    <button class="primary-button" (click)="save()" [disabled]="form.invalid">Ajouter <i class="fa fa-plus"></i> </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
