--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -21,5 +21,6 @@
         <app-visit-appointment *ngIf="windowPage == 'visit-appointment'" (closeEvent)="close()"></app-visit-appointment>
         <app-add-expense *ngIf="windowPage == 'add-expense'" (closeEvent)="close()"></app-add-expense>
         <app-prescription-model-submitter *ngIf="windowPage == 'prescription-model-submitter'" (closeEvent)="close()"></app-prescription-model-submitter>
+        <app-document-submitter *ngIf="windowPage == 'document-submitter'" (closeEvent)="close()"></app-document-submitter>
     </div>
 </div>
