--- a/src/app/components/dashboard/content/patient-visit/visit-documents/document/document.component.css
+++ b/src/app/components/dashboard/content/patient-visit/visit-documents/document/document.component.css
@@ -1,5 +1,17 @@
 .main-container {
     width: 100%;
+    transition-duration: 0.3s;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+}
+
+.main-container:hover {
+    box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.3);
+}
+
+.main-container:hover .control {
+    opacity: 1;
 }
 
 .image-container {
@@ -7,16 +19,13 @@
     height: 260px;
     position: relative;
     overflow: hidden;
-    border-radius: 16px;
 }
 
 .image-container img {
-    width: 100%;
+    height: 100%;
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    border-top-left-radius: 16px;
-    border-top-right-radius: 16px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .image-container p {
@@ -35,17 +44,57 @@
     text-transform: capitalize;
     font-weight: bold;
     font-size: 13px;
+    overflow: hidden;
 }
 
 .description-container {
     height: 80px;
     color: #555;
     font-size: 12px;
-    padding: 8px;
+    padding: 8px 16px;
 }
 
 .no-desc {
     color: rgb(254, 101, 85) !important;
     display: block;
     text-align: center;
+}
+
+.control {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    padding: 16px;
+    opacity: 0;
+    transition-duration: 0.3s;
+}
+
+.control span {
+    background: white;
+    padding: 4px 8px;
+    font-size: 12px;
+    border-radius: 16px;
+    transition-duration: 0.3s;
+}
+
+.control span i {
+    background: rgb(38, 94, 215);
+    padding: 4px;
+    color: white;
+    margin-left: 8px;
+    border-radius: 50%;
+    font-size: 10px;
+}
+
+.control span:last-child {
+    float: right;
+}
+
+.control span:hover {
+    background: rgb(38, 94, 215);
+    color: white;
+}
+
+.control span:hover i {
+    color: white;
 }
