--- a/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
+++ b/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
@@ -6,7 +6,7 @@
             <div class="page" *ngIf="page == 1">
                 <app-visit-information (visitSelectedEvent)="visitSelected($event)" [visit]="visit"></app-visit-information>
             </div>
-            <div class="page">
+            <div class="page" *ngIf="page == 2">
                 <app-visit-diagnosis [visit]="visit" *ngIf="visit.medicalFile"></app-visit-diagnosis>
             </div>
             <div class="page" *ngIf="page == 3">
