--- a/src/app/components/dashboard/content/patient-visit/visit-diagnosis/visit-diagnosis.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-diagnosis/visit-diagnosis.component.html
@@ -1,1 +1,14 @@
-<p>visit-diagnosis works!</p>
+<div class="main-container primary-radius">
+    <div class="visit-response" *ngFor="let visitResponse of visitsNeuronResponses ; let i = index">
+        <div class="visit-response-header" (click)="selectVisit(visitResponse , i )">
+            <span>{{visitResponse.createdAt}}</span>
+            <hr>
+            <i class="fa fa-chevron-down"></i>
+        </div>
+        <div class="responses row" *ngIf="i == 0 || expandVisit == visitResponse.id">
+            <div class="col col-md-3" *ngFor="let response of visitResponse.neuronResponses">
+                {{response.neuronPrediction}}
+            </div>
+        </div>
+    </div>
+</div>
