--- a/src/app/components/dashboard/content/patient-visit/visit-diagnosis/visit-diagnosis.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-diagnosis/visit-diagnosis.component.html
@@ -8,7 +8,7 @@
         <div class="responses row" *ngIf="i == 0 || expandVisit == visitResponse.id">
             <div class="col col-md-3" *ngFor="let response of visitResponse.neuronResponses">
 
-                <app-neuron-response [neuronResponse]="response"></app-neuron-response>
+                <app-neuron-response [modelOutputs]="modelOutputs" [neuronResponse]="response"></app-neuron-response>
 
             </div>
         </div>
