--- a/src/app/components/diagnosis/diagnosis-predictions/prediction/prediction.component.css
+++ b/src/app/components/diagnosis/diagnosis-predictions/prediction/prediction.component.css
@@ -32,3 +32,21 @@
     color: #555555;
     font-size: 12px;
 }
+
+.small-propa span {
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+.small-propa p {
+    line-height: 16px;
+    font-size: 12px;
+    max-height: 16px;
+    overflow: hidden;
+    margin-top: 4px;
+    color: #555;
+}
